MDEV-4108 Compilation warnings with RelWithDebInfo only present in the Galera tree

Fix for some compiler warnings.