storage/xtradb/lock/lock0lock.c
@@ -2211,7 +2211,7 @@ lock_rec_lock_slow(
 {
 	trx_t*	trx;
 #ifdef WITH_WSREP
-	lock_t *c_lock;
+	lock_t *c_lock= 0;
 #endif
 	lock_t*	lock;
 
